# onix

./: .gitignore  .history  .ocamlformat  CHANGELOG.md  Dockerfile  Makefile  Makefile.template  NOTES.md  README.md  TODO.md  bootstrap.nix  builder.nix  default-example.nix  default.nix  dune  dune-project  example-build-pkg.nix  flake.nix  onix-example.opam  onix-lock.json  onix-lock.nix  onix.nix  onix.opam  shell.nix
docs/: index.html
examples/hello/: default.nix  hello.ml  hello.opam  onix-lock.nix  onix.nix  result
examples/universe/: default.nix  dune  onix-lock.nix  remote-onix.nix  result  result-onix  universe.ml  universe.opam
examples/with-depexts-postgresql/: Main.ml  default.nix  dune  onix-lock.nix  with-depexts-postgresql.opam
examples/with-pin-depends/: default.nix  dune  dune-project  onix-lock.nix  with-pin-depends.opam  with_pin_depends.ml
nix/: Nix.ml  api.nix  bootstrap.nix  core.nix  dune
nix-parser/: Ast.ml  Lexer.mll  Nix_parser.ml  Parser.mly  Print.ml  Print.mli  Tokens.ml  dune
nix/experiments/: paths.nix  subst.nix  test-subst.nix  test-vars.nix  vars.nix
nix/onixPackages/: 0install-solver.nix  cmdliner.nix  default.nix  onix.nix  opam-0install.nix  overrideScope.nix  spdx_licenses.nix  swhid_core.nix
nix/overlay/: default.nix
nix/overlay/ocamlfind/: onix_install_topfind_192.patch  onix_install_topfind_198.patch
nix/overlays/: default.nix
nix/overlays/ocamlfind/: install_topfind.patch  onix_install_topfind_193.patch  onix_install_topfind_194.patch  onix_install_topfind_195.patch
nix/overrides/: default.nix
onix/: Build_context.ml  Build_context.mli  Depexts.ml  Gen_drv_tree.ml  Lib.ml  Lock_file.ml  Lock_file.mli  Lock_pkg.ml  Lock_pkg.ml.backup  Lock_pkg.mli  Main.ml  Nix_utils.ml  Nix_utils.mli  Opam_actions.ml  Opam_actions.mli  Opam_build.ml  Opam_repo.ml  Opam_utils.ml  Os_utils.ml  Overlay_files.ml  Overrides.ml  Pin_depends.ml  Pin_depends.mli  Pkg_ctx.ml  Pkg_ctx.mli  Pkg_scope.ml  Pkg_scope.mli  Pp_lock.ml  Pp_lock.mli  Pp_lock_nix.ml  Pp_lock_nix.mli  Pp_opam_lock.ml  Resolutions.ml  Resolutions.mli  Solver.ml  Solver.mli  Solver_context.ml  Solver_context.mli  Stdlib_utils.ml  Utils.ml  (+1 more)
overrides/: default.nix
playground/: cmdline.md  nix-api.md  propagated.nix
src/: Main.ml  dune
src/onix/: Main.ml  dune
src/onix_core/: Filter.ml  Lib.ml  Lock_file.ml  Lock_file.mli  Lock_pkg.ml  Lock_pkg.mli  Nix_utils.ml  Nix_utils.mli  Opam_actions.ml  Opam_actions.mli  Opam_utils.ml  Paths.ml  Pin_depends.ml  Pkg_scope.ml  Pkg_scope.mli  Pp_opam_lock.ml  Repo.ml  Resolutions.ml  Resolutions.mli  Scope.ml  Scope.mli  Solver.ml  Solver_context.ml  Solver_context.mli  System.ml  Utils.ml  dune
src/onix_lock_graphviz/: Onix_lock_graphviz.ml  dune
src/onix_lock_json/: Onix_lock_json.ml  Pp.ml  Pp.mli  dune
src/onix_lock_nix/: Nix_filter.ml  Nix_pkg.ml  Onix_lock_nix.ml  Pp.ml  Prelude.ml  Subst_and_patch.ml  dune
src/onix_lock_opam/: Onix_lock_opam.ml  Pp.ml  dune
tests/: Opam_to_nix.ml  Test_lock.ml  Test_vars.ml  depends_root.opam  dune  multiple-opam-repos.nix  onix-lock.nix  zarith.nix  zarith.opam
tests/opam-roots/pkg_opam_dir/: Makefile  default.nix  onix-lock.json
tests/opam-roots/pkg_opam_dir/opam/: bbb.opam
tests/opam-roots/pkg_opam_file/: onix-lock.json  opam
tests/transitive-deps/: default.nix
