opam-version: "2.0"
synopsis: "OCaml project manager based on Nix"
maintainer: ["Rizo I. <rizo@odis.io>"]
license: "ISC"
homepage: "https://github.com/odis-labs/onix"
bug-reports: "https://github.com/odis-labs/onix/issues"
dev-repo: "git+https://github.com/odis-labs/onix.git"
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.08" & < "5.0.0"}
  "dune" {>= "2.0"}
  "odoc" {with-doc}
  "bos"
  "cmdliner"
  "logs"
  "fmt"
  "fpath"
  "opam-0install"
  "yojson"
  "easy-format" {="1.3.2"}
]
