(library
 (public_name onix)
 (modules :standard \ Main)
 (libraries
  fmt
  bos
  logs
  yojson
  re
  opam-0install
  opam-format
  opam-file-format
  opam-state
  opam-core))

(executable
 (name Main)
 (package onix)
 (public_name onix)
 (modules Main)
 (libraries
  fpath
  logs
  logs.fmt
  logs.cli
  fmt
  fmt.cli
  fmt.tty
  cmdliner
  onix
  opam-core
  opam-format))

; Static files

(rule
 (alias static)
 (deps
  (:output Overlay_files.ml)
  (source_tree ../nix/overlay))
 (action
  (setenv
   SOURCE_DATE_EPOCH
   0
   (progn
    (run
     %{bin:ocaml-crunch}
     --mode=plain
     -o
     %{output}.corrected
     ../../../nix/overlay)
    (diff? %{output} %{output}.corrected)))))
