(test
 (name Test_vars)
 (modules Test_vars)
 (libraries yojson onix_core opam-format fmt))

(test
 (name Test_lock)
 (modules Test_lock)
 (libraries onix_core onix_lock_json opam-format opam-core fmt))

(test
 (name Opam_to_nix)
 (modules Opam_to_nix)
 (deps zarith.opam)
 (libraries
  onix_core
  onix_lock_nix
  opam-core
  opam-file-format
  opam-format
  fmt))
