opam-version: "2.0"
maintainer: "Xavier Leroy <xavier.leroy@inria.fr>"
authors: [
  "Antoine Miné"
  "Xavier Leroy"
  "Pascal Cuoq"
]
homepage: "https://github.com/ocaml/Zarith"
bug-reports: "https://github.com/ocaml/Zarith/issues"
dev-repo: "git+https://github.com/ocaml/Zarith.git"
build: [
  #["cmd1"] {pkg1+pkg2+pkg3:installed}
  #["cmd2"] {!(?foo & foo != bar)}
  #["cmd2"] {var1}
  #["cmd2"] {var2 = 3 | !(pkg1:var2)}

  ["cmd" "macos & arm64"] {os = "macos" & arch = "arm64"}

  ["dune" "subst"] {pinned}

  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]

  ["./configure" "!openbs & !freebsd & !macos"] {os != "openbsd" & os != "freebsd" & os != "macos"}

  [
    "sh"
    "-exc"
    "LDFLAGS=\"$LDFLAGS -L/usr/local/lib\" CFLAGS=\"$CFLAGS -I/usr/local/include\" ./configure"
  ] {os = "openbsd" | os = "freebsd"}

  [
    "sh"
    "-exc"
    "LDFLAGS=\"$LDFLAGS -L/opt/local/lib -L/usr/local/lib\" CFLAGS=\"$CFLAGS -I/opt/local/include -I/usr/local/include\" ./configure"
  ] {os = "macos" & os-distribution != "homebrew"}

  [
    "sh"
    "-exc"
    "LDFLAGS=\"$LDFLAGS -L/opt/local/lib -L/usr/local/lib\" CFLAGS=\"$CFLAGS -I/opt/local/include -I/usr/local/include\" ./configure"
  ] {os = "macos" & os-distribution = "homebrew" & arch = "x86_64" }

  [
    "sh"
    "-exc"
    "LDFLAGS=\"$LDFLAGS -L/opt/homebrew/lib\" CFLAGS=\"$CFLAGS -I/opt/homebrew/include\" ./configure"
  ] {os = "macos" & os-distribution = "homebrew" & arch = "arm64" }

  [make]
]

install: [
  ["dune" "build" "@runtest"] {with-test}
  ["dune" "build" "@arm64"] {arch = "arm64"}
  ["dune" "build" "@macos"] {os = "macos"}
  ["dune" "build" "@arm64-macos"] {arch = "arm64" & os = "macos"}
  ["dune" "build" "@arm64-macos"] {arch = "arm64" | os = "macos"}
  [make "install"]
]
#depends: ("pkg-1" | "pkg-2")
depends: [
  "pkg-plain"
  "pkg-ver" {>= "4.04.0"}
  "pkg-flag" {with-dev-setup}
  "pkg-ver-or-flag" {= "4.0" & with-test}
  "pkg-ver-and-flag" {= "4.0" & with-test}
  "pkg-flag-or" {with-dev-setup | with-test}
  "pkg-flag-and" {with-dev-setup & with-test}
]
synopsis:
  "Implements arithmetic and logical operations over arbitrary-precision integers"
description: """
The Zarith library implements arithmetic and logical operations over
arbitrary-precision integers. It uses GMP to efficiently implement
arithmetic over big integers. Small integers are represented as Caml
unboxed integers, for speed and space economy."""
url {
  src: "https://github.com/ocaml/Zarith/archive/release-1.12.tar.gz"
  checksum: [
    "md5=bf368f3d9e20b6b446d54681afc05a04"
    "sha512=8075573ae65579a2606b37dd1b213032a07d220d28c733f9288ae80d36f8a2cc4d91632806df2503c130ea9658dc207ee3a64347c21aa53969050a208f5b2bb4"
  ]
}
