opam-version: "2.0"
synopsis: "Simple hello-world example using onix"
maintainer: ["Rizo I. <rizo@odis.io>"]
license: "ISC"
homepage: "https://github.com/odis-labs/onix"
bug-reports: "https://github.com/odis-labs/onix/issues"
dev-repo: "git+https://github.com/odis-labs/onix.git"
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.08" & < "5.0"}
  "dune" {>= "2.0"}
  "conf-binutils"
  # "bap"
  # "tezos"
  # "fmt"
  # "ptime"
  # "alcotest"
  # "ppxlib"
  # "core_bench"
  # "dream"
  # "utop"
  # "lwt"
  # "ocp-browser"
  # "mirage"
  # "ocaml-lsp-server"
  # "ocamlformat"
  # "streaming"
  # "iter"
  # "seq"
  # "gen"
  # "containers"
  # "batteries"
  # "benchmark"
  # "yojson"
  # "caqti"
]
