opam-version: "2.0"
synopsis: "Simple hello-world example using onix"
maintainer: ["Rizo I. <rizo@odis.io>"]
license: "ISC"
homepage: "https://github.com/odis-labs/onix"
bug-reports: "https://github.com/odis-labs/onix/issues"
dev-repo: "git+https://github.com/odis-labs/onix.git"
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.08" & < "5.0"}
  "dune" {>= "2.0"}
  "fmt"
  "repr"
]
pin-depends: [
  ["repr.dev" "git+https://github.com/mirage/repr.git#0aee7b84b5d5b09a9495ece75c2c9fde0415872c"]
]