(library
 (name onix_lock_nix)
 (libraries onix_core fmt logs opam-format opam-file-format opam-core))

; Static files

(rule
 (alias static)
 (deps
  (:output Overlay_files.ml)
  (source_tree ../nix/overlay))
 (action
  (setenv
   SOURCE_DATE_EPOCH
   0
   (progn
    (run
     %{bin:ocaml-crunch}
     --mode=plain
     -o
     %{output}.corrected
     ../../../../nix/overlay)
    (diff? %{output} %{output}.corrected)))))
